@@ -6,7 +6,7 @@ ZConfig = 2.5.1
 ZODB3 = 3.8
 docutils = 0.4
 martian = 0.9.3
-grokcore.component = 1.0.1
+grokcore.component = 1.1
 mechanize = 0.1.7b
 pytz = 2007k
 simplejson = 1.7.1
